--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,53 @@
 <app-background></app-background>
 
-<div class="absolute prose max-w-none w-full m-10 flex gap-12 justify-center flex-row items-start">
+<div class="absolute prose max-w-none w-full flex gap-12 justify-center flex-row items-start py-12">
 
-   <main class="sticky top-0">
-       <div class="flex flex-col min-w-96">
-           <h2>Project Title</h2>
-           <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+   <main class="sticky top-0 max-w-96 ">
+       <div class="h-[90vh] overflow-auto p-4">
+
+           <div class="flex flex-col">
+               <h4>Project Title</h4>
+               <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+           </div>
+
+           <div class="flex flex-col">
+               <h4>Project Description</h4>
+               <textarea [value]="description$ | async" class="textarea textarea-bordered" placeholder="Bio"></textarea>
+           </div>
+
+           <div class="flex flex-col">
+               <h4>Main Image Url</h4>
+               <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+           </div>
+
+           <div class="flex flex-col">
+               <h4>Screenshots Url</h4>
+               <textarea [value]="description$ | async" class="textarea textarea-bordered" placeholder="Bio"></textarea>
+           </div>
+
+           <div class="flex flex-col">
+               <h4>Technologies</h4>
+
+               <div tabindex="0" class="collapse collapse-arrow border border border-base-300">
+                   <div class="collapse-title text-xl font-medium">
+                       Select technologies used
+                   </div>
+                   <div class="collapse-content">
+                       <app-tech-picker></app-tech-picker>
+                   </div>
+               </div>
+
+           </div>
+
+           <div class="form-control">
+               <label class="label cursor-pointer">
+                   <span class="label-text">Include License</span>
+                   <input type="checkbox" class="toggle" checked />
+               </label>
+           </div>
+
        </div>
-
-       <div class="flex flex-col min-w-96">
-           <h2>Project Description</h2>
-           <textarea [value]="description$ | async" class="textarea textarea-bordered" placeholder="Bio"></textarea>
-       </div>
-
-       <button (click)="generateMarkdown()" class="btn">Button</button>
+       <button (click)="generateMarkdown()" class="btn mt-4">Button</button>
    </main>
     <aside class="max-h-full overflow-auto">
    <app-md-preview *ngIf="displayMarkdown$ | async" [text]="markdownData"></app-md-preview>
