--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,79 @@
 <app-background></app-background>
 
-<div class="absolute prose max-w-none w-full flex gap-12 justify-center flex-row items-start py-12">
+<div class="absolute max-w-none w-full flex gap-12 justify-center flex-row items-start py-12">
 
-   <main class="sticky top-0 max-w-96 ">
-       <div class="h-[90vh] overflow-auto p-4">
+    <main class="sticky top-0 max-w-96 ">
 
-           <div class="flex flex-col">
-               <h4>Project Title</h4>
-               <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
-           </div>
+        <div class="h-[90vh] min-w-96 overflow-auto p-4">
 
-           <div class="flex flex-col">
-               <h4>Project Description</h4>
-               <textarea [value]="description$ | async" class="textarea textarea-bordered" placeholder="Bio"></textarea>
-           </div>
+            <div class="flex flex-col">
+                <h6>Title</h6>
+                <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                       placeholder="Project Title"
+                       type="text">
 
-           <div class="flex flex-col">
-               <h4>Main Image Url</h4>
-               <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
-           </div>
+            </div>
 
-           <div class="flex flex-col">
-               <h4>Screenshots Url</h4>
-               <textarea [value]="description$ | async" class="textarea textarea-bordered" placeholder="Bio"></textarea>
-           </div>
+            <div class="flex flex-col">
+                <h6>Description</h6>
+                <textarea
+                        class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Project Description..."
+                        rows="4"></textarea>
 
-           <div class="flex flex-col">
-               <h4>Technologies</h4>
+            </div>
 
-               <div tabindex="0" class="collapse collapse-arrow border border border-base-300">
-                   <div class="collapse-title text-xl font-medium">
-                       Select technologies used
-                   </div>
-                   <div class="collapse-content">
-                       <app-tech-picker></app-tech-picker>
-                   </div>
-               </div>
+            <div class="flex flex-col">
+                <h6>Main Image Url</h6>
+                <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                       placeholder="Project Title"
+                       type="text">
 
-           </div>
+            </div>
 
-           <div class="form-control">
-               <label class="label cursor-pointer">
-                   <span class="label-text">Include License</span>
-                   <input type="checkbox" class="toggle" checked />
-               </label>
-           </div>
+            <div class="flex flex-col">
+                <h6>Screenshots Url</h6>
+                <textarea
+                        class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Project Description..."
+                        rows="4"></textarea>
 
-       </div>
-       <button (click)="generateMarkdown()" class="btn mt-4">Button</button>
-   </main>
-    <aside class="max-h-full overflow-auto">
-   <app-md-preview *ngIf="displayMarkdown$ | async" [text]="markdownData"></app-md-preview>
+            </div>
+
+            <div class="flex flex-col">
+
+                <app-multi-picker
+                        (selectedItemsChange)="selectedTechnologies($event)"
+                        [items]="developmentTechnologies"
+                        title="technologies"
+                ></app-multi-picker>
+            </div>
+
+            <div class="form-control">
+                <label class="label cursor-pointer">
+                    <span class="label-text">Add License</span>
+                    <input checked class="toggle" type="checkbox"/>
+                </label>
+            </div>
+
+        </div>
+        <button (click)="generateMarkdown()"
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                type="button">
+            <svg class="mr-2" fill="none" height="20" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"
+                 stroke-width="1.5"
+                 viewBox="0 0 24 24" width="20">
+                <path d="M0 0h24v24H0z" fill="none" stroke="none"/>
+                <path d="M17 17m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"/>
+                <path d="M17 13v4h6"/>
+                <path d="M12 3v4a1 1 0 0 0 1 1h6"/>
+                <path d="M11.5 21h-6.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v2m0 3v4"/>
+            </svg>
+            Generate
+        </button>
+    </main>
+    <aside class="max-h-full overflow-auto prose">
+        <app-md-preview *ngIf="displayMarkdown$ | async" [text]="markdownData"></app-md-preview>
     </aside>
 </div>
 
