--- a/src/app/multi-picker/multi-picker.component.html
+++ b/src/app/multi-picker/multi-picker.component.html
@@ -16,11 +16,11 @@
     </div>
 
     <div class="flex p-4 gap-2 flex-wrap w-full min-h-8 max-h-24 bg-white border border-gray-300 rounded-lg overflow-auto">
-        <span (click)="removeItem(selected)" *ngFor="let selected of selectedItems"
+        <span *ngFor="let selected of selectedItems"
               class="inline-flex items-center px-2 py-1 me-2 text-sm font-medium text-blue-800 bg-blue-100 rounded dark:bg-blue-900 dark:text-blue-300"
               id="badge-dismiss-default">
         {{ selected.name }}
-            <button aria-label="Remove"
+            <button (click)="removeItem(selected)" aria-label="Remove"
                     class="inline-flex items-center p-1 ms-2 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900 dark:hover:bg-blue-800 dark:hover:text-blue-300"
                     data-dismiss-target="#badge-dismiss-default" type="button">
         <svg aria-hidden="true" class="w-2 h-2" fill="none" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -30,6 +30,7 @@
         </button>
         </span>
     </div>
+
 </div>
 
 
