--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-background></app-background>
+<app-background xmlns="http://www.w3.org/1999/html"></app-background>
 
-<div class="absolute w-full flex gap-12 justify-center flex-row items-start py-12">
+<div class="absolute w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start py-12">
 
-    <main [ngClass]="{'max-w-96': displayMarkdown$ | async}" class="sticky top-0 w-full max-w-[700px]">
+    <main [ngClass]="{'max-w-96': displayMarkdown$ | async}" class="block lg:sticky top-0 w-full max-w-[700px]">
 
         <div class="overflow-auto p-4">
 
@@ -71,9 +71,10 @@
             </svg>
             Generate
         </button>
+
     </main>
-    <aside *ngIf="displayMarkdown$ | async" class="max-h-full w-full max-w-[600px] overflow-auto prose">
-        <app-md-preview [text]="markdownData"></app-md-preview>
+    <aside *ngIf="displayMarkdown$ | async" class="max-h-full w-full max-w-[800px] overflow-auto">
+        <app-md-code-snippet [text]="markdownData"></app-md-code-snippet>
     </aside>
 </div>
 
