--- a/src/app/md-preview/md-preview.component.html
+++ b/src/app/md-preview/md-preview.component.html
@@ -1,9 +1,8 @@
-
-<div class="relative rounded-md w-full bg-white px-6 py-6 shadow-xl shadow-slate-700/10 ring-1 ring-gray-800/5 md:mx-auto md:max-w-3xl lg:max-w-4xl ">
-<!--<div class="border-2 rounded-2xl w-full lg:w-[900px] p-10 my-8">-->
-    <markdown ngPreserveWhitespaces
+<div class="prose prose-img:m-0 prose-a:inline-block prose-p:my-1 relative w-full bg-white px-6 py-6 shadow-xl shadow-slate-700/10 ring-1 ring-gray-800/5 md:mx-auto md:max-w-3xl lg:max-w-4xl ">
+    <!--<div class="border-2 rounded-2xl w-full lg:w-[900px] p-10 my-8">-->
+    <markdown (ready)="ready.next(text)"
               [data]="text"
-              (ready)="ready.next(text)"
+              ngPreserveWhitespaces
     >
     </markdown>
 </div>
