--- a/src/app/md-code-snippet/md-code-snippet.component.html
+++ b/src/app/md-code-snippet/md-code-snippet.component.html
@@ -145,7 +145,8 @@
 
             </ul>
             <div class="flex justify-end">
-                <button class="flex items-center px-3 py-2 text-xs font-medium text-gray-600 bg-gray-100 border-l border-gray-200 dark:border-gray-600 dark:text-gray-400 dark:bg-gray-800 hover:text-blue-700 dark:hover:text-white copy-to-clipboard-button"
+                <button (click)="copyCode()"
+                        class="flex items-center px-3 py-2 text-xs font-medium text-gray-600 bg-gray-100 border-l border-gray-200 dark:border-gray-600 dark:text-gray-400 dark:bg-gray-800 hover:text-blue-700 dark:hover:text-white copy-to-clipboard-button"
                         data-clipboard-content-type="javascript" data-copy-state="copy" data-tooltip-placement="bottom"
                         data-tooltip-target="clipboard-example-copy-clipboard-tooltip"
                         type="button">
