- fix markdown theme for dar/light

--- a/src/app/md-code-snippet/md-code-snippet.component.html
+++ b/src/app/md-code-snippet/md-code-snippet.component.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-        <div class="relative">
+        <div class="h-100vh-h-7 overflow-y-auto relative">
             <div [hidden]="tabEnabled !== 'preview'" class="overflow-hidden" tabindex="-1">
                 <app-md-preview [text]="text" [theme]="theme"></app-md-preview>
             </div>
