--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-background xmlns="http://www.w3.org/1999/html"></app-background>
 
-<div class="absolute w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start py-12">
+<div class="absolute w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start">
 
-    <main [ngClass]="{'max-w-96': displayMarkdown$ | async}" class="block lg:sticky top-0 w-full max-w-[700px]">
+    <main [ngClass]="{'max-w-96': displayMarkdown$ | async}" class="block w-full max-w-[700px]">
 
         <div class="overflow-auto p-4">
 
@@ -142,7 +142,8 @@
         </button>
 
     </main>
-    <aside *ngIf="displayMarkdown$ | async" class="max-h-full w-full max-w-[800px] overflow-hidden">
+    <aside *ngIf="displayMarkdown$ | async"
+           class="max-h-full w-full max-w-[800px] top-9 block lg:sticky  overflow-hidden">
         <app-md-code-snippet [text]="markdownData"></app-md-code-snippet>
     </aside>
 </div>
