- refactor code structure - refactor markdown service methods and added interfaces

--- a/src/app/components/background/background.component.html
+++ b/src/app/components/background/background.component.html
@@ -1,4 +1,4 @@
 <div class="fixed top-0 h-full w-full">
-    <img src="/assets/beams.jpg" alt="" class="saturate-50 absolute object-cover w-full h-full" />
+    <img alt="" class="saturate-50 absolute object-cover w-full h-full" src="./assets/beams.jpg"/>
     <div class="absolute w-full h-full inset-0 bg-[url(/assets/grid.svg)] bg-top [mask-image:linear-gradient(180deg,white,rgba(255,255,255,0))]"></div>
 </div>
