--- a/src/assets/github-markdown.css
+++ b/src/assets/github-markdown.css
@@ -542,6 +542,7 @@
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 2em;
+    list-style: revert !important;
 }
 
 .markdown-body ol ol,
