- extracted main form to a separate component

--- a/src/app/components/multi-picker/multi-picker.component.html
+++ b/src/app/components/multi-picker/multi-picker.component.html
@@ -47,7 +47,7 @@
                           stroke-width="2"/>
                 </svg>
             </div>
-            <input #searchInput
+            <input #searchInput (keydown.escape)="searchInput.value = '';"
                    [placeholder]="'Search ' + title"
                    class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                    id="input-group-search"
@@ -57,19 +57,23 @@
     <small *ngIf="items.length === 0" class="text-center block">No items to select</small>
     <ul aria-labelledby="dropdownSearchButton"
         class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200">
-        <li *ngFor="let item of items" [hidden]="!item.name.toLowerCase().includes(searchInput.value.toLowerCase())">
-            <div class="flex items-center ps-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600">
-                <input (change)="itemChange($event, item)"
-                       [checked]="selectedItems.includes(item)"
-                       [id]="id + item.value"
-                       class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"
-                       type="checkbox"
-                       value="">
-                <label [for]="id + item.value"
-                       class="w-full py-2 ms-2 text-sm font-medium text-gray-900 rounded dark:text-gray-300">
-                    {{
-                        item.name
-                    }}</label>
+        <li *ngFor="let item of items" [hidden]="!item.name.toLowerCase().includes(searchInput.value.toLowerCase())"
+            class="mb-1">
+            <div class="flex-col  rounded hover:bg-gray-100 dark:hover:bg-gray-600">
+                <div class="flex items-center ps-2 cursor-pointer">
+                    <input (change)="itemChange($event, item)"
+                           [checked]="selectedItems.includes(item)"
+                           [id]="id + item.value"
+                           class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"
+                           type="checkbox"
+                           value="">
+                    <label [for]="id + item.value"
+                           class="w-full py-2 ms-2 text-sm font-medium text-gray-900 rounded dark:text-gray-300">
+                        {{
+                            item.name
+                        }}</label>
+                </div>
+                <p class="text-xs px-2 pb-2 text-slate-400">{{ item.description }}</p>
             </div>
         </li>
     </ul>
